v1.22.2 ・UI0のv1.7.1と対応 ・点字ブロック削除機能のため、/api/session/deactivateを作りtactile.sessions.is_activeをfalseにできるようにした ・アプリ内で記録された点字ブロックの一覧を返す/api/recordsで、is_activeがtrueの点字ブロックしか返さないようにした
